--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,12 +1,11 @@
-user       www www;
-error_log  logs/error.log info;
 http {
   include      conf/mime.types;
   default_type application/octet-stream;
   log_format   simple '$remote_addr $request $status';
   server {
-    listen       80;
-    access_log   logs/domain1.access.log  simple;
+    listen       80 default_server;
+    root /home/box/web;
+
     location ^~ /upload/ {
       root    /home/box/web/uploads;
     }
