--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,18 +1,17 @@
 http {
   include      conf/mime.types;
   default_type application/octet-stream;
-  log_format   simple '$remote_addr $request $status';
   server {
     listen       80 default_server;
     root /home/box/web;
 
     location ^~ /upload/ {
-      root    /home/box/web/uploads;
+      alias    /home/box/web/uploads/;
     }
     location ~* ^.+\.{jpg|jpeg|js|css|png|gif}$ {
       root    /home/box/web/public;
     }
-    location ~* .*\..+$ {
+    location ~* ^.*/[^./]+$ {
       return 404;
     }
   }
