--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,18 +1,14 @@
-http {
-  include      conf/mime.types;
-  default_type application/octet-stream;
-  server {
-    listen       80 default_server;
-    root /home/box/web;
+server {
+  listen       80 default_server;
+  server_name  localhost;
 
-    location ^~ /upload/ {
-      alias    /home/box/web/uploads/;
-    }
-    location ~* ^.+\.{jpg|jpeg|js|css|png|gif}$ {
-      root    /home/box/web/public;
-    }
-    location ~* ^.*/[^./]+$ {
-      return 404;
-    }
+  location ^~ /upload/ {
+    alias    /home/box/web/uploads/;
+  }
+  location ~* ^.+\.{jpg|jpeg|js|css|png|gif}$ {
+    root    /home/box/web/public;
+  }
+  location ~* ^[^.]+$ {
+    return 404;
   }
 }
