--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,13 +2,13 @@ server {
   listen       80 default_server;
   server_name  localhost;
 
-  location ^~ /upload/ {
-    alias    /home/box/web/uploads/;
-  }
-  location ~* ^.+\.{jpg|jpeg|js|css|png|gif}$ {
-    root    /home/box/web/public;
-  }
-  location ~* ^[^.]+$ {
-    return 404;
-  }
+    location ^~ /upload/ {
+      alias    /home/box/web/uploads/;
+    }
+    location ~* ^.+\.(jpg|jpeg|js|css|png|gif)$ {
+      root    /home/box/web/public;
+    }
+    location ~* ^[^.]+$ {
+      return 404;
+    }
 }
