--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,8 +2,13 @@ server {
   listen       80 default_server;
   server_name  localhost;
 
-    location ^~ /upload/ {
+    location ^~ /uploads/ {
       alias    /home/box/web/uploads/;
+    }
+    location /hello/ {
+        proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
     location ~* ^.+\.(jpg|jpeg|js|css|png|gif)$ {
       root    /home/box/web/public;
