--- a/etc/gunicorn.conf
+++ b/etc/gunicorn.conf
@@ -1,1 +1,9 @@
-bind='0.0.0.0:8080'
+CONFIG = {
+    'working_dir': '/home/box/web',
+    'args': (
+        '--bind=0.0.0.0:8080',
+        '--workers=5',
+        '--timeout=60',
+        'hello.application',
+    ),
+}
