--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -14,6 +14,8 @@ server {
       root    /home/box/web/public;
     }
     location ~* ^[^.]+$ {
-      return 404;
+      proxy_pass http://localhost:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
